# kaggle-research

./: .gitignore  README.md  SKILL.md  TREE.md  bootstrap.sh  hardware.py  kaggle_wrapper.ipynb  main.py  pyproject.toml  worker.py
pipeline/: download.py  ensemble.py  features.py  submit.py  train.py  tuner.py  validate.py
state/: log.py
template/: hardware.py  kaggle_wrapper.ipynb  main.py  pyproject.toml  worker.py
template/pipeline/: download.py  ensemble.py  features.py  submit.py  train.py  tuner.py  validate.py
template/state/: experiments.py  log.py
