[project]
name = "kaggle-research"
version = "0.1.0"
description = "Autonomous Kaggle competition agent using a research loop pattern"
requires-python = ">=3.9"
dependencies = [
    "kagglehub>=0.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "psutil>=5.9",
    "optuna>=3.0",
    "tensorflow-decision-forests>=1.5",
]
